--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>AEcubed - Expanding Renewable Energy</title>
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@700&family=Lato:wght@100&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
